# xmllayout2

./: .gitignore  LICENSE  setup.cfg  setup.py
.github/workflows/: python-package.yml
xmllayout/: formatters.py  handlers.py
xmllayout/tests/: test_formatters.py
xmllayout/tests/nppBackup/: test_formatters.py.2014-01-28_155915.bak
