[metadata]
name = "xmllayout"
description = "Formats Python log messages as log4j XMLLayout XML"
version = "1.1.0"
author =  Philip Jenvey
author_email = "pjenvey@underboss.org" 
keywords=['logging', 'log4j']
license = BSD 2-clause
license_file = LICENSE
long_description_content_type = text/markdown; charset=UTF-8
classifiers=
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: Jython',
    'Topic :: System :: Logging'

[options.extras_require]
test =
    pytest >= 6.2.2